# python-tidal

./: .gitignore  HISTORY.md  HISTORY.rst  MANIFEST.in  Makefile  README.md  pyproject-dev.toml  pyproject.toml  setup.py
.github/workflows/: ci.yml
tests/: conftest.py  test_api.py  test_jsonapi_types.py  test_models_auth_client.py  test_oapi_models.py  test_utils_exceptions_stream.py
tidalapi/: __init__.py  auth.py  client.py  exceptions.py  http.py  jsonapi.py  media.py  mix.py  mp4decrypt.py  session.py  stream.py  types.py  user.py  utils.py
tidalapi/api/: __init__.py  catalog.py  catalog_v1.py  catalog_v2.py  stream.py  user.py  user_v1.py
tidalapi/models/: __init__.py  _base.py  album.py  artist.py  genre.py  mix.py  playlist.py  track.py  video.py
tidalapi/models_v1/: __init__.py  album.py  artist.py  genre.py  lyrics.py  mix.py  page.py  playlist.py  track.py  video.py
tidaloauth4mopidy/: models.py
