[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tidalapi"
version = "0.1.0"
description = "Clean Python client for the TIDAL music streaming API"
requires-python = ">=3.10"
dependencies = ["requests>=2.31"]

[project.optional-dependencies]
dev = ["pytest", "pytest-mock", "ruff"]

[tool.pytest.ini_options]
testpaths = ["tests"]
